Updated dark mode nav bar and fixed about section issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -206,10 +206,11 @@ p {
   text-decoration: none;
   position: relative;
   color: var(--light-background);
-  opacity: 1;
-  font-size: 30px;
+  opacity: 0.9;
+  font-size: 1.6rem;
+  padding: 5px 0;
   margin: 2rem 4rem;
-  padding: 5px 0px;
+  font-weight: 300;
 }
 
 .nav-btn-light::after {
@@ -219,7 +220,7 @@ p {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 5px;
+  height: 2px;
   transform-origin: right;
   transform: scaleX(0);
   transition: transform 400ms ease-in;
@@ -235,7 +236,7 @@ p {
   color: var(--light-background);
   opacity: 0.7;
   padding: 0px;
-  font-size: 30px;
+  font-size: 1.6rem;
   margin: 2rem 4rem;
 }
 
